# CppPreCompile

./: CMakeLists.txt  README.md  main.cpp  pBuild.cpp
include/: pBuild.h
stream/: BlockCodeStream.cpp  CodeReader.cpp  CodeStream.cpp  CodeWriter.cpp  FileCodeStream.cpp  FileCodeWriter.cpp  Line.cpp  MemoryCodeWriter.cpp
stream/include/: BlockCodeStream.h  CodeReader.h  CodeStream.h  CodeWriter.h  FileCodeStream.h  FileCodeWriter.h  Line.h  MemoryCodeWriter.h
struct/: BuildVal.cpp  BuildVal.h
util/: G.cpp  dlog.cpp  exceptions.cpp  helper.cpp
util/include/: G.h  dlog.h  exceptions.h  helper.h
